// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Visualizations -> Chart -> Editor -> Series Settings Changes series axis 1`] = `
{
  "seriesOptions": {
    "a": {
      "yAxis": 1,
    },
  },
}
`;

exports[`Visualizations -> Chart -> Editor -> Series Settings Changes series label 1`] = `
{
  "seriesOptions": {
    "a": {
      "name": "test",
    },
  },
}
`;

exports[`Visualizations -> Chart -> Editor -> Series Settings Changes series type 1`] = `
{
  "seriesOptions": {
    "a": {
      "type": "area",
    },
  },
}
`;
